methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:6: error: type mismatch;
 found   : Unit
 required: Boolean
    return mur=true
              ^