methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  var mur : Boolean= false
  forward()
  if(getGroundColor()==Color.green)
  	return mur=true
  
  return mur
}